<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="land.kho.meta.presentation.wallet.bsVerify.BsVerifyVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/bs_base"
        android:padding="@dimen/dp32"
        tools:background="@color/blue"
        tools:context=".presentation.wallet.bsVerify.BsVerifyFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email"
            visibleOrGone="@{!viewModel.isHavingEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_email"
                style="@style/ev_base"
                android:hint="@string/enter_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/et_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/btn_yellow"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_resend"
            android:visibility="gone"
            visibleOrGone="@{viewModel.isHavingEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_mail"
                style="@style/tv_16_base"
                android:gravity="center"
                setEmailText="@{viewModel.email}"
                tools:text="@string/verification_mail_has_been_already_send_to_x_check_your_inbox_to_verify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_new_email"
                style="@style/btn_yellow"
                android:onClick="@{()->viewModel.newEmail()}"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/enter_new_email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_mail" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>