<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="land.kho.meta.presentation.home.bsUserName.BsUserNameVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/bs_base"
        android:padding="@dimen/dp32"
        tools:background="@color/blue"
        tools:context=".presentation.home.bsUserName.BsUserNameFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rename"
            visibleOrGone="@{!viewModel.isHavingName}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_name"
                style="@style/ev_base"
                android:hint="@string/enter_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/et_base" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/btn_yellow"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ev_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_name"
            visibleOrGone="@{viewModel.isHavingName}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name"
                style="@style/tv_12_grey"
                android:gravity="center"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name_value"
                style="@style/tv_24_base"
                android:layout_marginTop="@dimen/dp8"
                android:gravity="center"
                android:text="@{viewModel.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                tools:text="Aryan" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_new_name"
                style="@style/btn_yellow"
                android:layout_marginTop="@dimen/dp16"
                android:onClick="@{()->viewModel.newName()}"
                android:text="@string/change_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>